🚀 upgrade: 使用 JDK 21 特性优化项目代码
✅ 主要改进：
- 改造 DTO 类为 Record：ErrorDTO、PageRequest、PageResponse
- 添加 Virtual Thread 支持，提升并发性能
- 优化集合操作，使用 JDK 原生 API 减少依赖
- 保持完全向后兼容，所有测试通过

🎯 JDK 21 特性应用：
- Record 类：提供不可变数据结构，减少样板代码
- Virtual Threads：为 I/O 密集型任务提供高并发支持
- 现代集合 API：Arrays.asList() 替代 Guava 依赖

📈 性能提升：
- Virtual Thread 支持数百万级并发任务
- Record 类内存占用更少，创建更高效
- 减少外部依赖，提升编译和运行性能

🔧 Generated with Claude Code

Co-Authored-By: Claude <noreply@anthropic.com>