@@ -2,7 +2,8 @@ package com.storyhasyou.kratos.utils;
 
 import cn.hutool.core.util.ArrayUtil;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -18,8 +19,8 @@ public class ArrayUtils extends ArrayUtil {
      * 则得到的Map是 {a=1, b=2, c=3, d=4}<br>
      * 如果两个数组长度不同，则只对应最短部分
      * 
-     * <p>使用JDK 21现代化API：List.of()替代Guava的Lists.newArrayList()
-     * 减少外部依赖，提升性能和可读性
+     * <p>使用JDK原生API：Arrays.asList()替代Guava的Lists.newArrayList()
+     * 减少外部依赖，支持null元素和空数组，保持向后兼容性
      *
      * @param <T>    the type parameter
      * @param <K>    the type parameter
@@ -28,6 +29,11 @@ public class ArrayUtils extends ArrayUtil {
      * @return Map map
      */
     public static <T, K> Map<T, K> zip(T[] keys, K[] values) {
-        return CollectionUtils.zip(List.of(keys), List.of(values));
+        // 处理 null 或空数组的情况，保持向后兼容性
+        if (isAllEmpty(keys, values)) {
+            return Collections.emptyMap();
+        }
+        
+        return CollectionUtils.zip(Arrays.asList(keys), Arrays.asList(values));
     }
 }
